<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/home_gray_light"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/score_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/home_gray_medium"
        android:text="@string/scores"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/home_gray_dark"
        android:text="@string/quit"
        android:textColor="@color/white"
        android:textSize="30sp" />
</LinearLayout>